--- a/client/src/components/content/home/home.css
+++ b/client/src/components/content/home/home.css
@@ -1,12 +1,12 @@
 
 .home-content {
     color: #9a9da0;
-    margin-top: 30vh;
+    margin-top: 35vh;
 }
 
 .home-content-mb {
     color: #9a9da0;
-    margin-top: 20vh;
+    margin-top: 30vh;
 }
 
 .home-content-title {
@@ -24,17 +24,17 @@
 .media-icons a {
     padding-left: 15px;
     padding-right: 15px;
-    color: #9a9da0;
+    color: #8892b0;
 }
 
 .media-icons a:hover {
-color: #ffffff;
+color: #64ffda;
 }
 
 .title-hr {
     margin-top: 0px;
     border-width: 2px;
-    border-color: #474e56;
+    border-color: #8892b0;
     width: 55%;
 }
 
@@ -43,4 +43,12 @@ color: #ffffff;
     border-width: 2px;
     border-color: #474e56;
     width: 90%;
+}
+
+.text-slate-lightest {
+    color: #ccd6f6;
+}
+
+.text-slate {
+    color: #8892b0;
 }
