--- a/client/src/components/content/porfolio/portfolio.css
+++ b/client/src/components/content/porfolio/portfolio.css
@@ -1,13 +1,32 @@
-
-
-.title-color {
-    color: rgb(193, 211, 235);
+.bg-navy {
+    background-color: #0a192f;
 }
 
-p a {
-    color: rgb(193, 211, 235);
+.text-slate-lightest {
+    color: #ccd6f6;
 }
 
-p a:hover {
-    color: white;
+.text-slate {
+    color: #8892b0;
+}
+
+.text-green {
+    color: #64ffda;
+}
+
+.learn-more {
+    color: #ccd6f6;
+}
+
+.learn-more:hover {
+    text-decoration: none;
+    color: #64ffda;
+}
+
+.pt-10 {
+    padding-top: 96px;
+}
+
+.pt-8 {
+    padding-top: 76px;
 }
