--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,11 +1,33 @@
+.bg-navy {
+    background-color: #0a192f;
+}
+
+.text-green {
+    color: #64ffda;
+}
+
+.text-slate {
+    color: #8892b0;
+}
+
 .brand-name {
     min-width: 105px;
 }
 
 .brand-h1 {
     font-size: 30px;
+    color: #64ffda;
 }
 
-.link-style:hover {
+.nav-link {
+    color: #8892b0;
+}
+
+.nav-link:hover {
     text-decoration: none;
+    color: #64ffda;
+}
+
+.test {
+    color: red;
 }
