--- a/client/src/components/content/porfolio/portfolio.css
+++ b/client/src/components/content/porfolio/portfolio.css
@@ -30,3 +30,23 @@
 .pt-8 {
     padding-top: 76px;
 }
+
+.mb-7 {
+    margin-bottom: 67px;
+}
+
+.mt-7 {
+    margin-top: 76px;
+}
+
+.project-hr {
+    border-width: 1px;
+    border-color: #8892b0;
+    width: 90%;
+}
+
+.project-hr-mb {
+    border-width: 1px;
+    border-color: #474e56;
+    width: 90%;
+}
