--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -6,6 +6,10 @@
     color: #64ffda;
 }
 
+.text-slate-lightest {
+    color: #ccd6f6;
+}
+
 .text-slate {
     color: #8892b0;
 }
@@ -17,6 +21,10 @@
 .brand-h1 {
     font-size: 30px;
     color: #64ffda;
+}
+
+.brand-h1:hover {
+    color: #ccd6f6;
 }
 
 .nav-link {
