--- a/client/src/components/content/posts/postStyles.css
+++ b/client/src/components/content/posts/postStyles.css
@@ -5,3 +5,35 @@
 .pt-8 {
     padding-top: 76px;
 }
+
+.bg-navy {
+    background-color: #0a192f;
+}
+
+.bg-navy-light {
+    background-color: #172a45;
+}
+
+.bg-navy-lighter {
+    background-color: #303C55;
+}
+
+.text-slate {
+    color: #8892b0;
+}
+
+.text-slate-light {
+    color: #a8b2d1;
+}
+
+.text-slate-lighter {
+    color: #ccd6f6;
+}
+
+.text-green {
+    color: #64ffda;
+}
+
+.text-white {
+    color: #e6f1ff;
+}
