--- a/client/src/components/content/posts/postStyles.css
+++ b/client/src/components/content/posts/postStyles.css
@@ -6,6 +6,14 @@
     padding-top: 76px;
 }
 
+.mt-10 {
+    margin-top: 96px;
+}
+
+.mt-8 {
+    margin-top: 76px;
+}
+
 .bg-navy {
     background-color: #0a192f;
 }
@@ -37,3 +45,13 @@
 .text-white {
     color: #e6f1ff;
 }
+
+/* Page */
+
+
+/* Thumbnail */
+.read-article:hover {
+    text-decoration: none;
+    color: #64ffda;
+}
+
