added styles for code blocks on Markdown

--- a/client/src/components/content/posts/postStyles.css
+++ b/client/src/components/content/posts/postStyles.css
@@ -58,3 +58,13 @@
 .btn-size {
 width: 80px;
 }
+
+/* Post Form */
+code {
+
+}
+
+pre {
+    /* background-color: #8e94a1; */
+    padding: 5px;
+}
