--- a/client/src/components/content/posts/postStyles.css
+++ b/client/src/components/content/posts/postStyles.css
@@ -2,9 +2,12 @@
 
 
 /* Thumbnail */
-.read-article:hover {
+.link-router:hover {
     text-decoration: none;
-    color: #8892b0;
+}
+
+.read-article:hover {
+    color: #64ffda;
 }
 
 .btn-size {
