--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,6 +70,15 @@
     font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console";
 }
 
+/* appear - on page load */
+.fade-appear {
+    opacity: 0;
+    z-index: 1;
+}
+.fade-appear.fade-appear-active {
+    opacity: 1;
+    transition: opacity 1000ms linear;
+}
 
 /* enter */
 .fade-enter {
@@ -78,7 +87,7 @@
 }
 .fade-enter.fade-enter-active {
     opacity: 1;
-    transition: opacity 5000ms linear 5000ms;
+    transition: opacity 2000ms linear 2000ms;
 }
 
 /* exit */
@@ -87,7 +96,7 @@
 }
 .fade-exit.fade-exit-active {
     opacity: 0;
-    transition: opacity 5000ms linear;
+    transition: opacity 2000ms linear 2000ms;
 }
 .fade-exit-done {
     opacity: 0;
@@ -119,3 +128,4 @@
 .slide-exit-done {
     opacity: 0;
 }
+
